# blue_moveit

./: README.md
blue_moveit/: CMakeLists.txt  package.xml
blue_moveit_bringup/: CMakeLists.txt  package.xml
blue_moveit_bringup/launch/: full.launch  full_moveit.launch  gazebo_demo.launch  left.launch  left_moveit.launch  right_moveit.launch  rviz_demo.launch
blue_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
blue_moveit_config/config/: blue_full.srdf  blue_full_moveit_controllers.yaml  blue_left.srdf  blue_moveit_controllers.yaml  blue_right.srdf  blue_right_moveit_controllers.yaml  fake_controllers.yaml  joint_limits.yaml  ompl_planning.yaml
blue_moveit_config/launch/: blue_full_moveit_controller_manager.launch.xml  blue_right_moveit_controller_manager.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  gazebo_demo.launch  move_group.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
blue_moveit_demos/: CMakeLists.txt  package.xml
blue_moveit_demos/include/: demo_moveit_arm_utils.cpp  demo_moveit_arm_utils.h  moveit_arm_utils.cpp  moveit_arm_utils.h
blue_moveit_demos/src/: left_end_effector_pose_reporter.cpp  pick_and_place.cpp  right_table_pick_and_place.cpp
blue_moveit_scenarios/: CMakeLists.txt  package.xml
blue_moveit_scenarios/include/: moveit_arm_utils.cpp
blue_moveit_scenarios/src/: pick_and_place.cpp  right_end_effector_pose_reporter.cpp
