<?xml version="1.0"?>
<package>
  <name>blue_moveit</name>
  <version>0.0.0</version>
  <description>The blue_moveit metapackage contains all the basic software for running and using moveit with Blue</description>

  <maintainer email="phil80301@berkeley.edu">Philipp Wu</maintainer>

  <license>BSD</license>

  <author email="brentyi@berkeley.edu">Brent Yi</author>
  <author email="phil80301@berkeley.edu">Philipp Wu</author>

  <buildtool_depend>catkin</buildtool_depend>

</package>
