<package>

  <name>blue_moveit_scenarios</name>
  <version>0.3.0</version>
  <description>
     Berkeley Blue Arm MoveIt Demo Scenarios
  </description>
  <author email="methyldragon@gmail.com">methylDragon</author>
  <maintainer email="methyldragon@gmail.com">methylDragon</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>controller_manager</build_depend>
  <build_depend>effort_controllers</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>gazebo_ros_control</build_depend>
  <build_depend>joint_state_controller</build_depend>
  <build_depend>joint_state_publisher</build_depend>
  <build_depend>joint_trajectory_controller</build_depend>
  <build_depend>robot_state_publisher</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>xacro</build_depend>
  <build_depend>libjsoncpp-dev</build_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>actionlib_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>actionlib_msgs</run_depend>

  <run_depend>moveit_core</run_depend>
  <build_depend>moveit_core</build_depend>

  <run_depend>moveit_ros_planning_interface</run_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>

  <run_depend>moveit_perception</run_depend>
  <build_depend>moveit_perception</build_depend>

  <run_depend>moveit_visual_tools</run_depend>
  <build_depend>moveit_visual_tools</build_depend>

</package>
